--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://viram87.github.io/build-pg",
+
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
