--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "serve": "^14.2.0",
     "slick-carousel": "^1.8.1",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://viram87.github.io/build-pg",
-
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
